--- a/src/configs/postgres_merge_upsert/postgres_merge_upsert_ad_lineitem.yaml
+++ b/src/configs/postgres_merge_upsert/postgres_merge_upsert_ad_lineitem.yaml
@@ -1,9 +1,16 @@
 ---
 pipeline_type: postgres_merge_upsert
-pipeline_key: ad_lineitem
+pipeline_key: ad_lineitem_builder
 pipeline_dag_configs:
   start_date: 2022-09-01 15:00:00
   schedule_interval: "0 15 * * *"
+  default_args: {
+    weight_rule: absolute,
+    owner: interviewee,
+    depends_on_past: False,
+    retry_delay: 5,
+    retries: 1,
+  }
 
 postgres:
   conn_id: analytics_db
